crates/plotnik-lib/tests/04-emit/linking/bare_supertype.txt
Q = (expression)
==== diagnostics ====
error: `expression` is a supertype, not a node kind
 --> query.ptk:1:6
  |
1 | Q = (expression)
  |      ^^^^^^^^^^
  |
help: use `(expression#)` instead, but it's not supported yet
